2012-09-17  chalabi

	* DESCRIPTION: changed maintainer field
	* DESCRIPTION: updated version number
	* R/hurst.R: reverted external .Fortran() call in pengFit() to R
	  call function lm.fit to comply with new CRAN policy

2012-03-20  chalabi

	* src/Fracdiff.f: fixed gfortran warnings in Fortran routines
	* DESCRIPTION: updated DESC file

2012-03-19  chalabi

	* R/armaPredict.R, R/fgnSim.R, R/wavelet.R: fixed partial argument
	  names

2012-03-01  chalabi

	* NAMESPACE: added NAMESPACE in fArma
	* R/wavelet.R: removed global variable in hurstSlider()
	* R/armaSim.R: fixed issue in simulation of ARIMA models
	* src/Wavethresh.c: use Rprintf rather than printf in C code.

2011-09-23  mmaechler

	* DESCRIPTION: remove deprecated "LazyLoad" entry

2010-12-04  wuertz

	* R/zzz.R: Test commit

2010-07-23  chalabi

	* inst/DocCopying.pdf: removed DocCopying.pdf license is already
	  specified in DESCRIPTION file

2009-09-30  chalabi

	* DESCRIPTION: updated version number

2009-09-29  chalabi

	* ChangeLog, DESCRIPTION: updated DESC and ChangeLog

2009-04-02  chalabi

	* DESCRIPTION: more explicit depends and suggests field in DESC
	  file.

2009-04-01  chalabi

	* DESCRIPTION: updated DESC file

2009-01-28  chalabi

	* man/ArmaInterface.Rd: updated manual pages to new Rd parser
